--- a/.htaccess
+++ b/.htaccess
@@ -6,5 +6,5 @@
 
     RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^ index.php [L]
+    RewriteRule .* index.php [L]
 </IfModule>
