Add PHP 5.4.0 requirement to composer

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         }
     ],
     "require": {
+        "php": ">=5.4.0",
         "pagekit/framework": "dev-master",
         "pagekit/razr": "0.9.*"
     },
