Added type to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "pagekit/pagekit",
+    "type": "project",
     "description": "The Pagekit CMS",
     "keywords": ["cms", "pagekit"],
     "homepage": "http://pagekit.com",
