added dev dependencies

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "pagekit/framework": "0.9.*",
-        "pagekit/razr": "0.9.*",
-        "lusitanian/oauth": "0.1.*"
-    },
-    "minimum-stability": "dev"
+        "pagekit/framework": "0.9.*@dev",
+        "pagekit/razr": "0.9.*@dev",
+        "doctrine/annotations": "1.*@dev",
+        "lusitanian/oauth": "0.1.*",
+        "mibe/feedwriter": "@dev",
+        "nikic/php-parser": "1.*@dev"
+    }
 }
