pagekit does no longer support .mo language files, use .php files instead

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 !/extensions/installer
 !/extensions/page
 !/extensions/system
+**/languages/*/*.php
 /themes/*
 !/themes/alpha
 /vendor/*
@@ -15,4 +16,3 @@
 /.idea
 node_modules
 .DS_Store
-*.mo
