--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.4.0",
         "pagekit/framework": "0.9.*@dev",
         "pagekit/razr": "0.9.*@dev",
-        "lusitanian/oauth": "0.1.*@dev",
+        "lusitanian/oauth": "~0.3",
         "nikic/php-parser": "1.*"
     }
 }
