--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 !/themes/alpha
 /vendor/*
 !/vendor/assets
+/vendor/assets/angular*
+/vendor/assets/jquery
+/vendor/assets/uikit
 /config.php
 /composer.phar
 /composer.lock
