--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "angular-route": "1.3.*",
     "angular-sanitize": "1.3.*",
     "angular-touch": "1.3.*",
-    "uikit": "master"
+    "uikit": "2.*"
   },
   "private": true
 }
