--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "lusitanian/oauth": "~0.3",
+        "nikic/php-parser": "1.*",
         "pagekit/framework": "0.9.*@dev",
         "pagekit/razr": "0.9.*@dev",
-        "lusitanian/oauth": "~0.3",
-        "nikic/php-parser": "1.*"
+        "swiftmailer/swiftmailer": "5.*",
+        "symfony/translation": "2.6.*"
     }
 }
