--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 /extensions/*
 !/extensions/blog
 !/extensions/hello
-!/extensions/installer
 !/extensions/page
 !/extensions/system
-!/extensions/tree
 /themes/*
 !/themes/alpha
 /vendor/*
@@ -16,6 +14,6 @@
 /composer.phar
 /composer.lock
 /pagekit*.zip
-/.idea
 node_modules
 .DS_Store
+.idea
