--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "gulp": "^3.8.10",
     "gulp-header": "^1.2.2",
     "gulp-less": "^2.0.1",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-jshint": "^1.9.0",
+    "jshint-stylish": "^1.0.0"
   }
 }
