--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,9 @@
     "angular-sanitize": "1.3.*",
     "angular-touch": "1.3.*",
     "angular-translate": "2.5.*",
-    "vue": "0.11.*",
-    "uikit": "~2.16.2"
+    "gravatarjs": "~1.0.0",
+    "uikit": "~2.16.2",
+    "vue": "0.11.*"
   },
   "private": true
 }
