--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,10 @@
 {
   "name": "pagekit",
   "dependencies": {
-    "angular": "1.3.*",
-    "angular-animate": "1.3.*",
-    "angular-cookies": "1.3.*",
-    "angular-loader": "1.3.*",
-    "angular-messages": "1.3.*",
-    "angular-resource": "1.3.*",
-    "angular-route": "1.3.*",
-    "angular-sanitize": "1.3.*",
-    "angular-touch": "1.3.*",
-    "angular-translate": "2.5.*",
     "gravatarjs": "~1.0.0",
     "uikit": "~2.18",
-    "vue": "~0.11.5"
+    "vue": "~0.11.5",
+    "lodash": "~3.6.0"
   },
   "private": true
 }
