--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "pagekit",
   "devDependencies": {
-    "merge-stream": "^0.1.7",
     "gulp": "^3.8.10",
+    "gulp-eslint": "^0.7.0",
     "gulp-header": "^1.2.2",
     "gulp-less": "^3.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-jshint": "^1.9.0",
-    "jshint-stylish": "^1.0.0"
+    "merge-stream": "^0.1.7"
   }
 }
