fixed paths in assets

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "pagekit/pagekit",
+    "version": "0.8.0",
     "type": "project",
     "description": "The Pagekit CMS",
     "keywords": ["cms", "pagekit"],
