moved config to application module

--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Pagekit\\": "app/modules/application/src",
-            "Pagekit\\Config\\": "app/modules/config/src"
+            "Pagekit\\": "app/modules/application/src"
         }
     }
 }
