--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
         "symfony/translation": "2.6.*",
         "symfony/var-dumper": "2.6.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
+    },
     "autoload": {
         "psr-4": {
             "Pagekit\\": "app/modules/application/src"
