--- a/composer.json
+++ b/composer.json
@@ -14,23 +14,23 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "doctrine/annotations": "1.*, >=1.2.1",
-        "doctrine/dbal": "2.5.*",
-        "guzzlehttp/guzzle": "4.*",
-        "ircmaxell/password-compat": "1.0.*",
-        "ircmaxell/random-lib": "1.0.*",
-        "lusitanian/oauth": "~0.3",
-        "nikic/php-parser": "1.*",
-        "swiftmailer/swiftmailer": "5.*",
-        "symfony/console": "2.6.*",
-        "symfony/finder": "2.6.*",
-        "symfony/http-foundation": "2.6.*",
-        "symfony/http-kernel": "2.6.*",
-        "symfony/routing": "2.6.*",
-        "symfony/stopwatch": "2.6.*",
-        "symfony/templating": "2.6.*",
-        "symfony/translation": "2.6.*",
-        "symfony/var-dumper": "2.6.*"
+        "doctrine/annotations": "~1.2.3",
+        "doctrine/dbal": "~2.5.1",
+        "guzzlehttp/guzzle": "~4.2.3",
+        "ircmaxell/password-compat": "~1.0.0",
+        "ircmaxell/random-lib": "~1.0.0",
+        "lusitanian/oauth": "~0.3.5",
+        "nikic/php-parser": "~1.2.2",
+        "swiftmailer/swiftmailer": "~5.4.0",
+        "symfony/console": "~2.6.6",
+        "symfony/finder": "~2.6.6",
+        "symfony/http-foundation": "~2.6.6",
+        "symfony/http-kernel": "~2.6.6",
+        "symfony/routing": "~2.6.6",
+        "symfony/stopwatch": "~2.6.6",
+        "symfony/templating": "~2.6.6",
+        "symfony/translation": "~2.6.6",
+        "symfony/var-dumper": "~2.6.6"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
