--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "psr/log": "~1.0.0",
         "doctrine/annotations": "~1.2.3",
         "doctrine/dbal": "~2.5.1",
         "guzzlehttp/guzzle": "~4.2.3",
@@ -23,9 +24,9 @@
         "nikic/php-parser": "~1.2.2",
         "swiftmailer/swiftmailer": "~5.4.0",
         "symfony/console": "~2.6.6",
+        "symfony/debug": "~2.6.6",
         "symfony/finder": "~2.6.6",
         "symfony/http-foundation": "~2.6.6",
-        "symfony/http-kernel": "~2.6.6",
         "symfony/routing": "~2.6.6",
         "symfony/stopwatch": "~2.6.6",
         "symfony/templating": "~2.6.6",
