--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,14 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "psr/log": "~1.0.0",
         "doctrine/annotations": "~1.2.3",
         "doctrine/dbal": "~2.5.1",
         "guzzlehttp/guzzle": "~4.2.3",
         "ircmaxell/password-compat": "~1.0.0",
         "ircmaxell/random-lib": "~1.0.0",
         "lusitanian/oauth": "~0.3.5",
+        "psr/log": "~1.0.0",
+        "punic/punic": "~1.5.0",
         "maximebf/debugbar": "~1.10.4",
         "nikic/php-parser": "~1.2.2",
         "swiftmailer/swiftmailer": "~5.4.0",
