--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
   "name": "pagekit",
   "dependencies": {
+    "lodash": "~3.7.0",
+    "globalize": "~1.0.0",
     "gravatarjs": "~1.0.0",
     "uikit": "~2.19",
-    "vue": "~0.11.7",
-    "lodash": "~3.7.0"
+    "vue": "~0.11.7"
   },
   "private": true
 }
