--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-util": "^3.0.4",
     "insert-css": "^0.2.0",
     "merge-stream": "^0.1.7",
+    "partialify": "^3.1.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vueify": "^1.1.4"
