--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,12 @@
   "name": "pagekit",
   "dependencies": {
     "lodash": "~3.7.0",
-    "globalize": "~1.0.0",
     "gravatarjs": "~1.0.0",
     "uikit": "~2.19",
     "vue": "~0.11.7"
+  },
+  "devDependencies": {
+    "globalize": "~1.0.0"
   },
   "private": true
 }
