--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
   "name": "pagekit",
   "devDependencies": {
-    "aliasify": "^1.7.2",
-    "browserify": "^9.0.8",
     "gulp": "^3.8.10",
-    "gulp-concat": "^2.5.2",
     "gulp-eslint": "^0.7.0",
     "gulp-header": "^1.2.2",
     "gulp-less": "^3.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
-    "insert-css": "^0.2.0",
+    "html-loader": "^0.2.3",
     "merge-stream": "^0.1.7",
-    "partialify": "^3.1.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "vueify": "^1.1.4"
+    "vue-loader": "^1.1.5"
   }
 }
