--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,10 @@ root = true
 [*]
 end_of_line = LF
 
-[{*.php, *.js, *.less, *.css, *.json, *.razr}]
+[{*.php, *.less, *.css}]
 indent_style = space
 indent_size = 4
+
+[{*.js, *.json}]
+indent_style = space
+indent_size = 2
