--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-util": "^3.0.4",
     "html-loader": "^0.2.3",
+    "lodash": "^3.7.0",
     "merge-stream": "^0.1.7",
     "vue-loader": "^1.1.5"
   }
