--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "pagekit",
+  "scripts": {
+    "install": "webpack"
+  },
   "devDependencies": {
     "glob": "^5.0.5",
     "gulp": "^3.8.10",
@@ -11,6 +14,7 @@
     "html-loader": "^0.2.3",
     "lodash": "^3.7.0",
     "merge-stream": "^0.1.7",
-    "vue-loader": "^1.1.5"
+    "vue-loader": "^1.1.5",
+    "webpack": "^1.8.11"
   }
 }
