--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "gravatarjs": "~1.0.0",
     "lodash": "~3.7.0",
-    "uikit": "~2.19",
+    "uikit": "~2.*",
     "vue": "~0.11.10"
   },
   "devDependencies": {
