--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
     "gravatarjs": "~1.0.0",
     "lodash": "~3.7.0",
     "uikit": "#master",
-    "vue": "~0.11.10"
+    "vue": "~0.11.10",
+    "vue-resource": "~0.1.0"
   },
   "devDependencies": {
     "globalize": "~1.0.0",
