--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "gravatarjs": "~1.0.0",
     "lodash": "~3.9.0",
     "uikit": "#master",
-    "vue": "~0.12.1",
+    "vue": "0.12.4",
     "vue-resource": "~0.1.0"
   },
   "devDependencies": {
