--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
     - 5.4
     - 5.5
     - 5.6
+    - 7.0
     - hhvm
 
 before_install:
@@ -19,5 +20,5 @@ script:
 
 matrix:
     allow_failures:
-        - php: hhvm
+        - php: 7.0
     fast_finish: true
