--- a/extensions/blog/composer.json
+++ b/extensions/blog/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "blog",
+    "name": "pagekit/blog",
+    "type": "pagekit-extension",
     "version": "0.8.0",
-    "type": "extension",
     "title": "Blog",
     "description": "Create a blog.",
     "license": "MIT",
@@ -13,6 +13,6 @@
         }
     ],
     "extra": {
-        "image": "extension.svg"
+        "image": "image.svg"
     }
 }
