--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "json-loader": "^0.5.2",
     "lodash": "^3.7.0",
     "merge-stream": "^0.1.7",
-    "vue-loader": "1.1.6",
-    "webpack": "^1.10.0"
+    "vue-loader": "^2.1.1",
+    "webpack": "^1.10.5"
   }
 }
