--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "composer/installers": "1.0.22",
         "doctrine/annotations": "~1.2.3",
         "doctrine/dbal": "~2.5.1",
         "guzzlehttp/guzzle": "~5.3.0",
@@ -39,10 +40,22 @@
     "require-dev": {
         "phpunit/phpunit": "~4.7.3"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "pagekit.com"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Pagekit\\": "app/modules/application/src",
-            "Pagekit\\Config\\": "app/modules/config/src"
+            "Pagekit\\Config\\": "app/modules/config/src",
+            "Pagekit\\Updater\\": "app/updater/src"
         }
+    },
+    "scripts": {
+        "pre-update-cmd": "Pagekit\\Updater\\ComposerEvent::extend",
+        "pre-install-cmd": "Pagekit\\Updater\\ComposerEvent::extend",
+        "pre-status-cmd": "Pagekit\\Updater\\ComposerEvent::extend"
     }
 }
