--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pagekit",
   "scripts": {
-    "install": "bower install && webpack"
+    "install": "bower install && webpack && gulp cldr"
   },
   "devDependencies": {
+    "cldr-localenames-modern": "^27.0.3",
     "glob": "^5.0.5",
     "gulp": "^3.8.10",
     "gulp-eslint": "^0.7.0",
