changed autoloading of 'system' and 'migration' module

--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,10 @@
     "autoload": {
         "psr-4": {
             "Pagekit\\": "app/modules/application/src",
+            "Pagekit\\System\\": "app/system/src",
             "Pagekit\\Config\\": "app/modules/config/src",
-            "Pagekit\\Console\\": "app/console/src"
+            "Pagekit\\Console\\": "app/console/src",
+            "Pagekit\\Migration\\": "app/modules/migration/src"
         }
     }
 }
