--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "composer/composer": "1.0.x-dev",
         "doctrine/annotations": "~1.2.3",
         "doctrine/dbal": "~2.5.1",
         "guzzlehttp/guzzle": "~5.3.0",
