move assets to /app/assets

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 **/languages/**/*.json
 **/app/bundle/**/*.js
+/app/assets/*
+!/app/assets/codemirror
+!/app/assets/marked
+!/app/assets/vue-intl
+!/app/assets/vue-validator
 /app/installer/assets/css/*
 /app/system/modules/theme/css/*
 /packages/*
