--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pagekit",
   "scripts": {
-    "install": "bower install && webpack && gulp && gulp cldr"
+    "install": "bower install && webpack && gulp"
   },
   "devDependencies": {
     "cldr-localenames-modern": "^27.0.3",
