--- a/.htaccess
+++ b/.htaccess
@@ -44,6 +44,11 @@ Options -Indexes
 
 </IfModule>
 
+# Avoid PHP 5.6 deprecated $HTTP_RAW_POST_DATA warnings at PHP startup sequence
+<IfModule mod_php5.c>
+  php_value always_populate_raw_post_data   -1
+</IfModule>
+
 # Redirect admin URL, if rewrite is not enabled
 <IfModule !mod_rewrite.c>
     <IfModule mod_alias.c>
