--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "symfony/stopwatch": "~2.7.3",
         "symfony/templating": "~2.7.3",
         "symfony/translation": "~2.7.3",
-        "symfony/var-dumper": "~2.7.3"
+        "symfony/var-dumper": "~2.7.3",
+        "twig/twig": "^1.22"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.7.3"
