move vue-validator to vue-form add new fields component add new v-validator directive rename v-valid directive to v-validate

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /app/assets/*
 !/app/assets/codemirror
 !/app/assets/marked
+!/app/assets/vue-form
 !/app/assets/vue-intl
 !/app/assets/vue-validator
 /app/installer/assets/css/*
