--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "composer/composer": "1.0.x-dev",
+        "composer/composer": "dev-master#7a9eb02190d334513e99a479510f87eed18cf958",
         "doctrine/annotations": "~1.2.3",
         "doctrine/dbal": "~2.5.1",
         "guzzlehttp/guzzle": "~5.3.0",
