--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "pagekit",
   "dependencies": {
     "lodash": "~3.10.1",
+    "lscache": "~1.0.5",
     "uikit": "#master",
     "vue": "~0.12.15",
     "vue-resource": "~0.1.16"
