--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "lscache": "~1.0.5",
     "uikit": "#master",
     "vue": "~0.12.15",
+    "vue-form": "pagekit/vue-form#0.1.0",
     "vue-resource": "~0.1.16"
   },
   "devDependencies": {
