--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "lscache": "~1.0.5",
     "uikit": "#master",
     "vue": "1.0.0-migration",
-    "vue-form": "pagekit/vue-form#0.1.0",
+    "vue-form": "pagekit/vue-form#master",
     "vue-intl": "~0.1.0",
     "vue-resource": "~0.1.16"
   },
