--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
     "install": "bower install; webpack; gulp"
   },
   "devDependencies": {
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-transform-runtime": "^6.1.18",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-runtime": "^6.2.0",
+    "builder-utils": "git+ssh://git@github.com/yootheme/builder-utils.git",
     "cldr-localenames-modern": "^27.0.3",
     "glob": "^5.0.5",
     "gulp": "^3.8.10",
@@ -16,7 +22,9 @@
     "json-loader": "^0.5.2",
     "lodash": "^3.7.0",
     "merge-stream": "^0.1.7",
-    "vue-loader": "^6.0.4",
-    "webpack": "^1.11.0"
+    "vue-hot-reload-api": "^1.2.1",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^7.1.2",
+    "webpack": "^1.12.9"
   }
 }
