--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "babel-plugin-transform-runtime": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-runtime": "^6.2.0",
-    "builder-utils": "git+ssh://git@github.com/yootheme/builder-utils.git",
+    "cldr-core": "^28.0.2",
     "cldr-localenames-modern": "^27.0.3",
     "glob": "^5.0.5",
     "gulp": "^3.8.10",
     "gulp-eslint": "^0.7.0",
     "gulp-header": "^1.2.2",
     "gulp-less": "^3.0.0",
+    "less": "^2.5.1",
     "gulp-rename": "^1.2.0",
     "gulp-util": "^3.0.4",
     "html-loader": "^0.3.0",
