--- a/package.json
+++ b/package.json
@@ -4,27 +4,29 @@
     "install": "bower install; webpack; gulp"
   },
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.1.18",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-runtime": "^6.2.0",
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-transform-runtime": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-runtime": "^5.8.0",
     "cldr-core": "^28.0.2",
     "cldr-localenames-modern": "^27.0.3",
+    "css-loader": "*",
     "glob": "^5.0.5",
     "gulp": "^3.9.0",
     "gulp-eslint": "^0.7.0",
     "gulp-header": "^1.2.2",
     "gulp-less": "^3.0.0",
-    "less": "^2.5.1",
     "gulp-rename": "^1.2.0",
     "gulp-util": "^3.0.4",
     "html-loader": "^0.3.0",
     "json-loader": "^0.5.2",
+    "less": "^2.5.1",
     "merge-stream": "^0.1.7",
-    "vue-hot-reload-api": "^1.2.1",
+    "style-loader": "*",
+    "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
-    "vue-loader": "^7.1.2",
+    "vue-loader": "^7.2.0",
     "webpack": "^1.12.9"
   }
 }
