--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "babel-plugin-transform-runtime": "^6.1.2",
     "babel-preset-es2015": "^6.1.2",
     "babel-runtime": "^5.8.0",
-    "cldr-core": "^28.0.2",
-    "cldr-localenames-modern": "^28.0.0",
+    "cldr-core": "28.0.0",
+    "cldr-localenames-modern": "28.0.0",
     "css-loader": "*",
     "glob": "^5.0.5",
     "gulp": "^3.9.0",
@@ -19,7 +19,7 @@
     "gulp-less": "^3.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-util": "^3.0.4",
-    "html-loader": "^0.3.0",
+    "html-loader": "^0.4.0",
     "json-loader": "^0.5.2",
     "less": "^2.5.1",
     "lodash": "^3.10.1",
