--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "vue": "~1.0.11",
     "vue-form": "pagekit/vue-form#master",
     "vue-intl": "~0.1.1",
-    "vue-resource": "~0.1.17"
+    "vue-resource": "#develop"
   },
   "devDependencies": {
     "js-md5": "~1.1.0"
