--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-**/languages/**/*.json
-**/languages/**/*.php
 **/app/bundle/**/*.js
+**/languages/**/*
 /app/vendor/*
 /app/assets/*
 !/app/assets/codemirror
