--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-plugin-transform-runtime": "^6.1.2",
     "babel-preset-es2015": "^6.1.2",
     "babel-runtime": "^5.8.0",
+    "bower": "^1.7.6",
     "cldr-core": "28.0.0",
     "cldr-localenames-modern": "28.0.0",
     "css-loader": "*",
