--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "JSONStorage": "~1.0.0",
     "lodash": "~3.10.1",
-    "uikit": "#master",
+    "uikit": "master",
     "vue": "~1.0.14",
     "vue-form": "pagekit/vue-form#master",
     "vue-intl": "~0.1.1",
