--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "JSONStorage": "~1.0.0",
     "lodash": "~3.10.1",
     "uikit": "master",
-    "vue": "~1.0.14",
+    "vue": "1.0.18",
     "vue-form": "pagekit/vue-form#master",
     "vue-intl": "~0.1.1",
     "vue-resource": "#master"
