--- a/.htaccess
+++ b/.htaccess
@@ -20,7 +20,9 @@
 
 # URL rewrites
 <IfModule mod_rewrite.c>
-    Options -MultiViews
+    <IfModule mod_negotiation.c>
+        Options -MultiViews
+    </IfModule>
 
     RewriteEngine On
 
