--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pagekit",
   "scripts": {
-    "install": "bower install; webpack; gulp"
+    "install": "bower install && webpack && gulp"
   },
   "devDependencies": {
     "babel-core": "^6.1.2",
